update dependencies+cosmetics